tests/failure/missing/context.expected
syntax error, unexpected ANY_TOKEN, expecting CONTEXT_RIGHT: line 8, column 12 to line 8, column 12:
    * < F  * --> FF;
           ^

Failed at token: * (ANY_TOKEN)
    * < F  * --> FF;
                   ^

Failed at token: ; (SEMICOLON)
